Telephony: Heads up meets SlimKat....SlimKat meets Google IO [3/4] Add heads up setting for the native integration in dialer
Enabled by default

PS
- derp

PS
update commit message header

Change-Id: I0a540f2dc2667d572797a68c07b6eb471653ec16

Conflicts:
	res/values/cr_strings.xml
	res/xml/call_feature_setting.xml
	src/com/android/phone/CallFeaturesSetting.java

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -150,4 +150,6 @@
     <string name="incoming_call_style_classic">Classic</string>
     <string name="incoming_call_style_fullscreen_photo">Fullscreen caller photo</string>
 
+    <string name="bg_incall_as_heads_up">Show as heads up</string>
+    <string name="bg_incall_as_heads_up_summary">Show incoming call in background notification as heads up</string>
 </resources>
