--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -217,6 +217,14 @@
       android:persistent="false"
       android:defaultValue="true" />
 
+  <CheckBoxPreference
+      android:key="bg_incall_screen_as_heads_up"
+      android:title="@string/bg_incall_as_heads_up"
+      android:persistent="false"
+      android:defaultValue="true"
+      android:dependency="bg_incall_screen"
+      android:summary="@string/bg_incall_as_heads_up_summary"/>
+
   <PreferenceScreen
       android:key="button_respond_via_sms_key"
       android:title="@string/respond_via_sms_setting_title"
