Fix and incoming BG Call (Thanks SLIM)

--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -218,12 +218,27 @@
       android:defaultValue="true" />
 
   <CheckBoxPreference
+      android:key="bg_incall_screen"
+      android:title="@string/bg_incall"
+      android:persistent="false"
+      android:defaultValue="true"
+      android:summary="@string/bg_incall_summary"/>
+
+  <CheckBoxPreference
       android:key="bg_incall_screen_as_heads_up"
       android:title="@string/bg_incall_as_heads_up"
       android:persistent="false"
       android:defaultValue="true"
       android:dependency="bg_incall_screen"
       android:summary="@string/bg_incall_as_heads_up_summary"/>
+
+  <ListPreference
+      android:key="flip_action"
+      android:title="@string/flip_action_title"
+      android:dialogTitle="@string/flip_action_dialog_title"
+      android:entries="@array/flip_action_setting_entries"
+      android:entryValues="@array/flip_action_setting_values"
+      android:persistent="false" />
 
   <PreferenceScreen
       android:key="button_respond_via_sms_key"
