--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -149,7 +149,10 @@
     <string name="incoming_call_style_title">Incoming call screen style</string>
     <string name="incoming_call_style_classic">Classic</string>
     <string name="incoming_call_style_fullscreen_photo">Fullscreen caller photo</string>
-
+   
+    <!-- Call UI in background -->
+    <string name="bg_incall">Incoming call in background</string>
+    <string name="bg_incall_summary">Keep incoming call UI in background when screen is on, show notification and play ringtone only.</string>
     <string name="bg_incall_as_heads_up">Show as heads up</string>
     <string name="bg_incall_as_heads_up_summary">Show incoming call in background notification as heads up</string>
 </resources>
